syntax="proto3";

package rallybargain.srv.feed;

service FeedService {
    rpc Create(Feed) returns (Response) {}
    rpc GetAll(Request) returns (Response) {} 
}

message Feed {
    string id = 1;
    string title = 2;
    bool isLocal = 3;
    string location = 4; // url or physical local
    int64 datetime = 5;
}

message Request {}

message Response {
    Feed feed = 1;
    repeated Feed feeds = 2;
}